Fix movie aspect ratio errors with slow streams

When getting media size before the pipeline is pre-rolled,
we'd be getting errors because we're trying to set the aspect ratio
with a zero denominator.

https://bugzilla.gnome.org/show_bug.cgi?id=601707